--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -38,6 +38,11 @@
         <url-pattern>/do</url-pattern>
     </servlet-mapping>
 
+    <servlet-mapping>
+        <servlet-name>Controller</servlet-name>
+        <url-pattern>/admin/do</url-pattern>
+    </servlet-mapping>
+
     <servlet>
         <servlet-name>ErrorHandler</servlet-name>
         <servlet-class>com.savko.controller.ErrorHandler</servlet-class>
